--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "connect-mongo": "^0.8.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-    "nodemailer": "~0.7.1"
+    "nodemailer": "~0.7.1",
+    "serve-favicon": "~2.3.0"
   }
 }
