--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-uglify": "~0.5.0",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
+    "multiparty": "^4.1.2",
     "nodemailer": "~0.7.1",
     "serve-favicon": "~2.3.0"
   }
