--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^0.8.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
